kubernetes/auth/traefik-auth-middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia-auth-middleware
  namespace: prd
spec:
  forwardAuth:
    address: http://authelia-svc.prd.svc:9091/api/verify?rd=https://${DOMAIN}/ssoauth/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Group
      - Remote-Email
