kubernetes/auth/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-deploy
  namespace: prd
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia/authelia:4.30.4
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: false
          ports:
            - containerPort: 9091
              name: http
      volumes:
        - name: config
          secret:
            secretName: authelia-config
