kubernetes/auth/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-svc
  namespace: prd
  labels:
    name: authelia
spec:
  ports:
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: authelia
