kubernetes/auth/ingress-tls.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: authelia-ingress
  namespace: prd
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /ssoauth
            backend:
              service:
                name: authelia-svc
                port:
                  name: http
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: cert
